Stretch fixed

--- a/source/sass/blocks/_hero.scss
+++ b/source/sass/blocks/_hero.scss
@@ -5,7 +5,7 @@
 
   @media (min-resolution: $retina-dpi), (min-resolution: $retina-dppx) {
     background: url("../img/index-can-mobile@2x.png") 50% 72% no-repeat, url("../img/index-background-mobile@2x.jpg") 0 0 no-repeat, linear-gradient(to bottom, $color-primary 0%, $color-primary 12%, #ffffff 12%);
-    background-size: 280px 271px, 320px 305px;
+    background-size: 280px 271px, 100%;
   }
 
   @media (min-width: $tablet-width) {
