--- a/source/sass/blocks/_main-nav.scss
+++ b/source/sass/blocks/_main-nav.scss
@@ -1,10 +1,18 @@
 .main-nav {
   position: relative;
+
+  @media (min-width: $tablet-width) {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    @include content-center;
+  }
 }
 
 .main-nav__toggle {
   position: absolute;
-  top: -44px;
+  top: 20px;
   right: 23px;
   width: 20px;
   height: 20px;
@@ -14,6 +22,7 @@
   cursor: pointer;
   background-repeat: no-repeat;
   background-position: center;
+  flex-grow: 1;
 
   @media (min-width: $tablet-width) {
     @include visually-hidden;
