--- a/source/sass/blocks/_page-header.scss
+++ b/source/sass/blocks/_page-header.scss
@@ -1,41 +1,40 @@
-.page-header__content-center {
-  @include content-center;
+.page-header {
 
   @media (min-width: $tablet-width) {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 70.8rem;
-    margin: 0 auto;
     padding-top: 2.2rem;
   }
 
   @media (min-width: $desktop-width) {
-    width: 122rem;
     padding-top: 5.5rem;
   }
 }
 
 .page-header__wrapper {
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: nowrap;
-  padding: 1.4rem 1rem 2rem;
+  padding-left: 2rem;
+  height: 6.5rem;
   border-bottom: 1px solid $color-line-light;
-  padding-right: calc(10% + 4rem);
 
   @media (min-width: $tablet-width) {
     padding: 0;
     border: none;
+    max-width: 19.2rem;
   }
 }
 
 .page-header__logo {
-  flex-grow: 1;
+  position: relative;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  height: 4.5rem;
+  flex-grow: 3;
 }
 
 .page-header__logo:hover {
@@ -72,6 +71,9 @@
 .page-header__logo-text {
   width: 10.2rem;
   height: 1.9rem;
+  margin-right: auto;
+  margin-left: auto;
+  transform: translateX(-2rem);
 
   @media (min-width: $tablet-width) {
     display: none;
